--- a/inc/isolinux/isolinux.cfg
+++ b/inc/isolinux/isolinux.cfg
@@ -32,10 +32,19 @@ label linux
   menu default
   kernel vmlinuz
   append initrd=initrd.img ks=cdrom:/ks.cfg 
+label linuxusb
+  menu label ^Install desktop system (from USB)
+  menu default
+  kernel vmlinuz
+  append initrd=initrd.img ks=hd:sda1:/ks.cfg method=hd:sda1:/centos 
 label vesa
   menu label Install desktop system with ^basic video driver
   kernel vmlinuz
   append initrd=initrd.img xdriver=vesa nomodeset ks=cdrom:/ks.cfg
+label vesa
+  menu label Install desktop system with ^basic video driver
+  kernel vmlinuz
+  append initrd=initrd.img xdriver=vesa nomodeset ks=hd:sda1:/ks.cfg method=hd:sda1:/centos
 label rescue
   menu label ^Rescue installed desktop system
   kernel vmlinuz
