--- a/inc/isolinux/isolinux.cfg
+++ b/inc/isolinux/isolinux.cfg
@@ -33,7 +33,7 @@ label linux
   kernel vmlinuz
   append initrd=initrd.img ks=cdrom:/ks.cfg 
 label linuxusb
-  menu label ^Install desktop system (from USB)
+  menu label Install desktop system (from USB)
   menu default
   kernel vmlinuz
   append initrd=initrd.img ks=hd:sda1:/ks.cfg method=hd:sda1:/centos 
@@ -41,8 +41,8 @@ label vesa
   menu label Install desktop system with ^basic video driver
   kernel vmlinuz
   append initrd=initrd.img xdriver=vesa nomodeset ks=cdrom:/ks.cfg
-label vesa
-  menu label Install desktop system with ^basic video driver
+label vesausb
+  menu label Install desktop system with basic video driver
   kernel vmlinuz
   append initrd=initrd.img xdriver=vesa nomodeset ks=hd:sda1:/ks.cfg method=hd:sda1:/centos
 label rescue
