--- a/inc/isolinux/isolinux.cfg
+++ b/inc/isolinux/isolinux.cfg
@@ -42,7 +42,7 @@ label vesa
   kernel vmlinuz
   append initrd=initrd.img xdriver=vesa nomodeset ks=cdrom:/ks.cfg
 label vesausb
-  menu label Install desktop system with basic video driver
+  menu label Install desktop system with basic video driver (from USB)
   kernel vmlinuz
   append initrd=initrd.img xdriver=vesa nomodeset ks=hd:sda1:/ks.cfg method=hd:sda1:/centos
 label rescue
