fixes after split

--- a/inc/isolinux/isolinux.cfg
+++ b/inc/isolinux/isolinux.cfg
@@ -34,9 +34,8 @@ label linux
   append initrd=initrd.img ks=cdrom:/ks.cfg 
 label linuxusb
   menu label Install desktop system (USB)
-  menu default
   kernel vmlinuz
-  append initrd=initrd.img ks=hd:sda1:/ks.cfg method=hd:sda1:/centos 
+  append initrd=initrd.img ks=hd:sda1:/ks.cfg
 label vesa
   menu label Install desktop system with basic video driver
   kernel vmlinuz
@@ -44,15 +43,11 @@ label vesa
 label vesausb
   menu label Install desktop system with basic video driver (USB)
   kernel vmlinuz
-  append initrd=initrd.img xdriver=vesa nomodeset ks=hd:sda1:/ks.cfg method=hd:sda1:/centos
+  append initrd=initrd.img xdriver=vesa nomodeset ks=hd:sda1:/ks.cfg
 label rescue
   menu label Rescue installed desktop system
   kernel vmlinuz
   append initrd=initrd.img rescue
-label diy
-  menu label Install a core Linux system (pkgsrc-on-slack)
-  kernel bzImage
-  append initrd=diy.img load_ramdisk=1 prompt_ramdisk=0 rw printk.time=0 nomodeset SLACK_KERNEL=huge.s
 label memtest86
   menu label Memory test
   kernel memtest
