--- a/inc/ks.cfg
+++ b/inc/ks.cfg
@@ -1,17 +1,18 @@
 # DracoLinux EL6 - http://dracolinux.org
 
 install
-#interactive
+interactive
 cdrom
 bootloader
 reboot --eject
 #network --bootproto=query
 selinux --disabled
-%packages --nobase
-draco-desktop
-@devel
-@firmware
-%end
+
+#%packages --nobase
+#draco-desktop
+#@devel
+#@firmware
+#%end
 
 %post
 
